# FanFaire

./: Cargo.toml  tags
src/: main.rs
