[package]
name = "discord_fanfaire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
# serenity = { path = "../serenity", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "standard_framework"] }

[dependencies.songbird]
path = "../songbird"

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
